Make sure that bottom border is not clipping

--- a/css/style.css
+++ b/css/style.css
@@ -648,3 +648,7 @@ input[type="number"] {
 
   cursor: not-allowed;
 }
+
+span.opacity--hidden{
+  opacity: 0;
+}
